--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,5 @@
+server.port=8081
+
 spring.datasource.url=jdbc:postgresql://localhost:5432/d_db
 spring.datasource.username=postgres
 spring.datasource.password=postgres
@@ -12,3 +14,5 @@ spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.show-sql=true
 
 spring.main.allow-bean-definition-overriding=true
+
+logging.file=server.log
