--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 server.port=8081
 
-spring.datasource.url=jdbc:postgresql://localhost:5432/d_db
+spring.datasource.url=jdbc:postgresql://d-db:5432/d_db
 spring.datasource.username=postgres
 spring.datasource.password=postgres
 
