--- a/src/main/resources/liquibase.properties
+++ b/src/main/resources/liquibase.properties
@@ -1,5 +1,5 @@
 changeLogFile=db/changelog/db.changelog-master.yaml
-url=jdbc:postgresql://d-db:5432/d_db
+url=jdbc:postgresql://d-server-db:5432/d_db
 username=postgres
 password=postgres
 driver=org.postgresql.Driver
