--- a/.gitignore
+++ b/.gitignore
@@ -39,5 +39,7 @@ dependency-reduced-pom.xml
 buildNumber.properties
 .mvn/timing.properties
 .mvn/wrapper/maven-wrapper.jar
+*.log
+*.gz
 
 # End of https://www.gitignore.io/api/maven
