--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -16,3 +16,7 @@ spring.jpa.show-sql=true
 spring.main.allow-bean-definition-overriding=true
 
 logging.file=server.log
+
+spring.boot.admin.client.url=http://d-server-admin:8087
+management.endpoints.web.exposure.include=*
+spring.boot.admin.client.instance.name=d-auth
