--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,5 @@
 server.port=8081
+spring.application.name=d-server-auth
 
 spring.datasource.url=jdbc:postgresql://d-server-db:5432/d_db
 spring.datasource.username=postgres
@@ -19,4 +20,6 @@ logging.file=server.log
 
 spring.boot.admin.client.url=http://d-server-admin:8087
 management.endpoints.web.exposure.include=*
-spring.boot.admin.client.instance.name=d-auth
+
+spring.boot.admin.client.instance.name=d-server-auth
+eureka.client.serviceUrl.defaultZone=http://d-server-eureka:8088/eureka
