--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,25 +1,26 @@
+#App config
 server.port=8081
-spring.application.name=d-server-auth
+logging.file=server.log
+app-name=d-server-auth
 
+#Banco config
 spring.datasource.url=jdbc:postgresql://d-server-db:5432/d_db
 spring.datasource.username=postgres
 spring.datasource.password=postgres
-
 spring.datasource.driverClassName=org.postgresql.Driver
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQL95Dialect
 spring.jpa.properties.hibernate.temp.use_jdbc_metadata_defaults=false
 spring.jpa.properties.hibernate.format_sql=true
-
 #spring.jpa.properties.hibernate.default_schema=my_sch
-
 spring.jpa.show-sql=true
-
 spring.main.allow-bean-definition-overriding=true
 
-logging.file=server.log
-
-spring.boot.admin.client.url=http://d-server-admin:8087
+#Admin config
+spring.boot.admin.client.url=d-server-admin
 management.endpoints.web.exposure.include=*
+spring.boot.admin.client.instance.name=${app-name}
 
-spring.boot.admin.client.instance.name=d-server-auth
+#Eureka config
+spring.application.name=${app-name}
+eureka.client.registerWithEureka=true
 eureka.client.serviceUrl.defaultZone=http://d-server-eureka:8088/eureka
